--- a/TODO
+++ b/TODO
@@ -1,4 +1,5 @@
 There's lots to do:
 
 * Add an option to print a series of sed commands to fix the files.
-* Add comments to python code.
+* Script to download the latest word list from wikipedia.
+* Add a -d flag to dump the misspelling list to misspelligs.py.
