Add the language TODO entry.
I keep forgetting to put this in.

--- a/TODO
+++ b/TODO
@@ -2,3 +2,4 @@ There's lots to do:
 
 * Add an option to print a series of sed commands to fix the files.
 * Tests for cli.
+* Give some thought to supporting multiple languages?
