--- a/README
+++ b/README
@@ -3,6 +3,8 @@ words in source code.  It does this by looking for words from
 a list of common misspellings.  The dictionary it uses to do this
 is based on the Wikipedia list of common misspellings.
 
+* http://en.wikipedia.org/wiki/Wikipedia:Lists_of_common_misspellings/For_machines
+
 The list has been slightly modified to remove some changes that cause
 a number of false positives.  In particular `ok->OK` was removed (ok is
 frequently used in perl tests for instance).
@@ -19,4 +21,10 @@ source tree as an example):
     ../coreutils/src/tac.c[342]: unneccessary -> "unnecessary"
     ../coreutils/src/test.c[97]: supressed -> "suppressed"
 
-* http://en.wikipedia.org/wiki/Wikipedia:Lists_of_common_misspellings/For_machines
+CREDITS
+
+Kevin Lyda: initial shell goo and python version. https://github.com/lyda
+myint: Support for python 3 and some initial support for utf8.
+       https://github.com/myint
+Maciej Blizinski: potential use in opencsw pushed move to python.
+                  https://github.com/automatthias
