--- a/TODO
+++ b/TODO
@@ -3,3 +3,4 @@ There's lots to do:
 * Implement option to print a series of sed commands to fix the files.
 * Implement option to interactively fix files.
 * Give some thought to supporting multiple languages?
+* Split camel case and underscore words?
