--- a/doc/misspellings.1
+++ b/doc/misspellings.1
@@ -85,8 +85,10 @@ If you can come up with a list for a different language, use the
 \fB\-m\fP option.
 .SH BUGS
 .sp
-Quite possibly. Report them via the \fI\%issue tracker\fP at the project
-website.
+Quite possibly. Report them via the issue tracker at the project
+website:
+.sp
+\fI\%https://github.com/lyda/misspell\-check/issues\fP
 .SH SEE ALSO
 .sp
 \fI\%http://en.wikipedia.org/wiki/Wikipedia:Lists_of_common_misspellings\fP
